signup , login validation complete and touch send email code and contact us

--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ PORT= 1991
 MONGODB_URI = mongodb://localhost:27017
 
 JWT_SECURITY_KEY =  BRANDIFY_THE_BRAND_OF_GRAPGIC_DESIHNER
+
+# APP_PASSWORD = ebus wvxc hyxt laf
+
+APP_PASSWORD = gwtm bpln jsde wwnd
+
+USER = mmutahar@gmail.com
